# resetrobotnewsm

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  last_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  metal_line.STL
urdf/: resetrobotnewsm.csv  resetrobotnewsm.urdf
