<package>
  <name>resetrobotnewsm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for resetrobotnewsm</p>
    <p>This package contains configuration data, 3D models and launch files
for resetrobotnewsm robot</p>
  </description>
  <author>Tzu</author>
  <maintainer email="yingtzu325@icloud.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>